--- a/Project3/index.html
+++ b/Project3/index.html
@@ -5,20 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>English Dictionary</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1 class="heading">English Dictionary</h1>
-        <input type="text" class="input" id="input" placeholder="Search a word">
-        <p class="text" id="text">Type a word and press enter</p>
-        <div class="meaning" id="meaning">
-            <p>Word Title: <span class="title" id="title">___</span></p>
-            <p>Meaning:<span class="meaningtitle" id="meaningtitle">___</span></p>
-            <audio src="" controls id="audio"></audio>
+    <button class="btn btn-outline-danger">
+        <div class="container">
+            <h1 class="heading">English Dictionary</h1>
+            <input type="text" class="input" id="input" placeholder="Search a word">
+            <p class="text" id="text">Type a word and press enter</p>
+            <div class="meaning" id="meaning">
+                <p>Word Title: <span class="title" id="title">___</span></p>
+                <p>Meaning:<span class="meaningtitle" id="meaningtitle">___</span></p>
+                <audio src="" controls id="audio"></audio>
+            </div>
         </div>
-    </div>
+    </button>
     <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
